# weaveffi-image-everywhere

./: .gitignore  Cargo.toml  README.md  image.yml  justfile
crates/weaveffi-image/: Cargo.toml
crates/weaveffi-image/src/: lib.rs
demos/c/: README.md  demo.c  run.sh
demos/cpp/: README.md  demo.cpp  run.sh
demos/csharp/: Program.cs  README.md  WeaveFFIImageDemo.csproj  run.sh
demos/dart/: README.md  pubspec.yaml  run.sh
demos/go/: README.md  demo.go  go.mod  run.sh  setup.sh
demos/kotlin/: Demo.kt  README.md  run.sh
demos/node/: README.md  demo.mjs  package.json  run.sh  setup.sh
demos/python/: README.md  demo.py  run.sh
demos/ruby/: README.md  demo.rb  run.sh
demos/swift/: Package.swift  README.md  run.sh
demos/wasm/: README.md  demo.mjs  run.sh
scripts/: _emit-results-json.py  build-rust.sh  fetch-asset.sh  generate.sh  verify.sh
sdk/: scaffold.rs
sdk/android/: build.gradle  settings.gradle
sdk/c/: weaveffi.c  weaveffi.h
sdk/cpp/: CMakeLists.txt  README.md  weaveffi.hpp
sdk/dart/: README.md  pubspec.yaml
sdk/dart/lib/: weaveffi.dart
sdk/dotnet/: README.md  WeaveImage.cs  WeaveImage.csproj  WeaveImage.nuspec
sdk/go/: README.md  go.mod  weaveffi.go
sdk/node/: binding.gyp  index.js  package.json  types.d.ts  weaveffi_addon.c
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/weaveffi/: __init__.py  weaveffi.py  weaveffi.pyi
sdk/ruby/: README.md  weaveffi.gemspec
sdk/ruby/lib/: weaveffi.rb
sdk/swift/: Package.swift
sdk/wasm/: README.md  weaveffi_wasm.d.ts  weaveffi_wasm.js
(+8 files in other folders)
